# liste

./: .gitignore  Cargo.toml  README  README.md  requirements.txt
examples/: feeds  settings.toml
liste/: app.py  db.py
src/: app.rs  controller.rs  database.rs  lib.rs  main.rs  model.rs  screen.rs  settings.rs  utils.rs  window.rs
src/components/: component.rs  context.rs  core.rs  display.rs  mod.rs  statusbar.rs  sync.rs
src/controllers/: component.rs  display.rs  mod.rs  statusbar.rs  sync.rs
src/models/: channels.rs  feeds.rs  items.rs  listview.rs  mod.rs  subscriptions.rs
src/windows/: list.rs  list_channels.rs  list_items.rs  mod.rs  statusbar.rs  text.rs  topbar.rs
