[package]
name = "liste"
version = "0.0.1"
authors = ["poulp <amathieu@protonmail.com>"]
description = "RSS/ATOM reader for terminal with rust and ncurses"
license = "WTFPL"

[dependencies]
ncurses = "5.85.0"
clap = "2.24.1"
rusqlite = "0.12.0"
rss = { version = "0.7.0", features = ["from_url"] }
atom_syndication = "0.5"
reqwest = "0.7"
toml = "0.4"